# robotics_software_engineer

./: .gitignore  Curriculum.md  README.md  dependencies.repos  robotics_software_engineer.code-workspace
behavior_trees/: CMakeLists.txt  package.xml
behavior_trees/launch/: gtg_bt.launch.py
behavior_trees/src/: blackboard_ports.cpp  bt_blackboard_ports_fallback.cpp  bt_sequence_nodes.cpp  drone_fire_extinguish.cpp  path_follow_fallbacks.cpp  r2_bt_go_to_goal.cpp  r2_bt_sequence.cpp  sequence_loop.cpp  sequence_nodes.cpp
behavior_trees/trees/: blackboard_ports_bt.xml  bt_blackboard_ports_fallback_tree.xml  bt_sequence_nodes_tree.xml  drone_fire_extinguish_bt.xml  path_follow_fallbacks_bt.xml  r2_bt_go_to_goal_tree.xml  r2_bt_reactive.xml  r2_bt_sequence_tree.xml  sequence_loop_bt.xml  sequence_nodes.xml
control_systems/: CMakeLists.txt  README.md  package.xml
control_systems/config/: cs.perspective  diffbot_controller.yaml  urdf_view.rviz
control_systems/docs/: LQR.ipynb
control_systems/include/: lqr_lib.hpp  lqr_node.hpp
control_systems/launch/: goal_planer.launch.py  lqr_multi_goals.launch.py  velocity_controller.launch.py
control_systems/src/: goal_linear.cpp  goal_planer.cpp  lqr_lib.cpp  lqr_node.cpp  velocity_controller_drive.cpp
control_systems/urdf/: diff_drive_velocity_controller.urdf
cpp_fundamentals/: .clang-tidy  CMakeLists.txt  README.md
cpp_fundamentals/include/: lib_line_following.h
cpp_fundamentals/src/: class_robot.cpp  formate.cpp  functions_sensor_reading.cpp  lib_line_following.cpp  lib_main.cpp  namespaces_sensor_processing.cpp  pointers_robot_location.cpp  ros2_node.cpp  template_robot.cpp
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/launch/: turtlebot3.launch.py
custom_interfaces/msg/: CameraLidar.msg  TwoInts.msg
custom_interfaces/src/: combine_ints.cpp  combine_sensors.cpp
custom_robots/: CMakeLists.txt  README.md  package.xml
custom_robots/launch/: gazebo.launch.py  rviz.launch.py
custom_robots/src/: static_transform.cpp
drive_drone/: CMakeLists.txt
drive_drone/launch/: p1_a_drone_fly_gazebo_rviz.launch.py  p1_b_tb3_drone_gazebo.launch.py
drive_mobile_robot/: CMakeLists.txt  README.md  package.xml
drive_mobile_robot/launch/: multi_nodes.launch.py  multi_turtle_drive.launch.py  turtletbot_drive.launch.py
drive_mobile_robot/src/: drive_turtle.cpp  publisher.cpp  subscriber.cpp
kuka_arm_ros2/kuka_arm_pkg/: CMakeLists.txt  package.xml
kuka_arm_ros2/kuka_arm_pkg/config/: kuka_arm.rviz  kuka_arm_controllers.yaml
mapping/: CMakeLists.txt  README.md  package.xml
mapping/config/: map_loading_goal.rviz
mapping/launch/: goal_with_markers.launch.py  map_loading_2d.launch.py  maze_mapping_2d.launch.py  maze_mapping_3d.launch.py  maze_tb3_bringup.launch.py
mapping/map/: map.yaml  maze_2d.pgm  maze_2d.yaml
mapping/models/maze_map/: model.sdf  (+1 more)
mapping/src/: lidar_sub.cpp  lidar_to_grid.cpp  occupancy_grid_pub.cpp  occupancy_grid_sub.cpp  occupancy_grid_to_map.cpp
mapping/worlds/: maze_map.world
module_2_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/install/: local_setup.sh  setup.sh
module_2_assignment/launch/: led_control.launch.py
module_2_assignment/log/: latest_build
module_2_assignment/src/: Readme1.md  led_publisher.cpp  led_subscriber.cpp  spiral_turtle.cpp  turtle_log_spiral.cpp
module_4_assessment/robot_sensing_debug/: CMakeLists.txt  package.xml
module_4_assignment/: CMakeLists.txt  Readme.md
module_5_assignment/: CMakeLists.txt  Readme.md  package.xml
module_5_assignment/include/: lqr_lib.hpp  lqr_node.hpp
module_5_assignment/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
module_5_assignment/launch/: camera_line_following.launch.py
module_5_assignment/log/: latest_build
module_5_assignment/models/: model.config
module_5_assignment/src/: line_following_with_camera.cpp  linefollowingwithcamerakip.cpp  lqr_lib.cpp  lqr_node.cpp
module_5_assignment/worlds/: line_following.world
navigation_/: CMakeLists.txt  package.xml
navigation_/config/: nav2_steps.rviz  planner_params_v2.yaml
navigation_/launch/: nav2_stack.launch.py  nav2_steps.launch.py
navigation_/src/: nav2_goal.cpp
path_planning/: .clang-tidy  CMakeLists.txt  README.md  package.xml
path_planning/config/: global_planner_plugin.xml  planner_params.yaml  search_path_planning.rviz
path_planning/docs/: RRT.ipynb
path_planning/launch/: astart.launch.py  custom_planner.launch.py  path_plan_rviz.launch.py
path_planning/overlays/: Astar.md
path_planning/src/: Astar.cpp  Dijkstra.cpp  a_a_basic_setup_visualization.cpp  a_b_grid_points_to_grid.cpp  a_c_partial_astart.cpp  a_d_astart_complete.cpp  a_e_complete_astar.cpp  a_f_complete_astart_viz.cpp  algo_astar.cpp  algo_astar_plugin.cpp  algo_gridsweep.cpp  algo_rrt.cpp  algo_rrt_node.cpp  astar_opencv.cpp  astar_ros2.cpp  main.cpp  main_rrt.cpp  nav2_planner_interface.cpp  occupancy_grid.cpp  path_planning.cpp  rrt.cpp  rrt_ros2.cpp  rrt_star_ros2.cpp
path_planning/test/: test_rrt.cpp  test_rrt_node.cpp
point_cloud_processing/: CMakeLists.txt
point_cloud_processing/launch/: bring_rviz.launch.py  process_kitti.launch.py
point_cloud_processing/src/: 0_table_scene.cpp  1_planner_cloud.cpp  2_circular_cloud.cpp  3_filtering_segmentation.cpp  4_point_path_drawing.cpp  5_kitti_data_voxel.cpp  6_kd_tree.cpp  7_traffic_segmentation.cpp
robot_motion/: CMakeLists.txt  main.cpp  robot.cpp
robot_motion/include/: RobotMotion.h  Sensor.h  camera.h  lidar.h  motors.h  sensor.h
robot_motion/src/: RobotMotion.cpp  Sensor.cpp  camera.cpp  differential_drive_fk.py  differential_drive_ik.py  lidar.cpp  motors.cpp
sensor_fusion/: CMakeLists.txt  README.md  package.xml
sensor_fusion/config/: ekf_tb3_imu_odom.yaml  kitti.rviz  sensor_fusion.rviz
sensor_fusion/docs/: Extended_Kalman.md  Kalman.md  README.md
sensor_fusion/include/: ekf_lib.hpp
sensor_fusion/launch/: ekf_tb3_imu_odom.launch.py  kitti_data_run.launch.py  linear_kf.launch.py
sensor_fusion/src/: ekf_lib.cpp  ekf_node.cpp  linear_kf.cpp
(+244 files in other folders)
