<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_systems</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noshluk2@gmail.com">luqman</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo_msgs</depend>
  <depend>ros2_control</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>


  </export>
</package>
